array.island.Island.scala.error
Compilation error:
Island:2: error: not found: value liste
liste=()
^Island:5: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-1 to num.length-1){
        ^